--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 
     <!-- the username -->
     <h1>
-            John Doe
+           Alexis Gonzalez 
           </h1>
 
     <!-- and role or location -->
     <h2>
-            Better Visuals
+            Desarrolador Jr
           </h2>
 
   </header>
@@ -31,7 +31,7 @@
   <div class="profile-bio">
 
     <p>
-      It takes monumental improvement for us to change how we live our lives. Design is the way we access that improvement.
+      Universidad Tecnologica Santa Catariana<a>
     </p>
 
   </div>
