--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <!-- and role or location -->
     <h2>
-            Desarrolador Jr
+            Desarrollador Jr
           </h2>
 
   </header>
