--- a/Login.html
+++ b/Login.html
@@ -7,18 +7,18 @@
     <title>Título de la Página</title>
 </head>
 <body>
-    <div class="login-box">
+      <div class="login-box">
         <h2>Login</h2>
-        <form>
+        <form id="loginForm">
           <div class="user-box">
-            <input type="email" name="" required="">
+            <input type="email" id="emailInput" required>
             <label>Email</label>
           </div>
           <div class="user-box">
-            <input type="password" name="" required="">
+            <input type="password" id="passwordInput" required>
             <label>Password</label>
           </div>
-          <a href="#">
+          <a href="#" id="submitButton">
             <span></span>
             <span></span>
             <span></span>
@@ -27,7 +27,6 @@
           </a>
         </form>
       </div>
-
 </body>
 <script src="/script.js"></script>
 
