--- a/Login.html
+++ b/Login.html
@@ -18,13 +18,7 @@
             <input type="password" id="passwordInput" required>
             <label>Password</label>
           </div>
-          <a href="#" id="submitButton">
-            <span></span>
-            <span></span>
-            <span></span>
-            <span></span>
-            Submit
-          </a>
+          <button type="button" id="submitButton">Submit</button>
         </form>
       </div>
 </body>
