--- a/Login.html
+++ b/Login.html
@@ -18,7 +18,11 @@
             <input type="password" id="passwordInput" required>
             <label>Password</label>
           </div>
-          <button type="button" id="submitButton">Submit</button>
+          <button type="button" id="submitButton">
+             <span></span>
+            <span></span>
+            <span></span>
+            <span></span></button>
         </form>
       </div>
 </body>
