--- a/Login.html
+++ b/Login.html
@@ -18,8 +18,9 @@
             <input type="password" id="passwordInput" required>
             <label>Password</label>
           </div>
-          <button type="button" id="submitButton">
-             <span></span>
+            <button>
+          <input type="submit" id="submitButton">
+            <span></span>
             <span></span>
             <span></span>
             <span></span></button>
